--- a/index.html
+++ b/index.html
@@ -5,37 +5,44 @@
     <meta charset="UTF-8">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
         integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
+    <script src="https://unpkg.com/vue@next"></script>
+
     <link rel="stylesheet" href="styles/styles.css">
 
 </head>
 
 <body>
 
-    <div>
-        <form>
+    <div id="app">
+        <form @submit.prevent="searchGoogleBooks">
             <fieldset class="border">
                 <legend class="w-auto">Google Books Search</legend>
-                <div class = "row form-group">
+                <div class="row form-group">
                     <label for="txtSearch" class="col-sm-1 col-form-label">
                         keyword:
                     </label>
                     <div class="col-sm-5 col-lg-4">
                         <input type="text" id="txtSearch" name="txtSearch" class="form-control"
-                        placeholder="keyword...">
+                            placeholder="keyword..." v-model="keyword">
                     </div>
                 </div>
 
                 <div class="row">
                     <div class="col-sm-4">
-                        <button type="button" class="btn btn-primary" onclick="searchGoogleBooks()">Search</button>
+                        <button type="submit" class="btn btn-primary">Search</button>
                         <button type="reset" class="btn btn-secondary">Reset</button>
                     </div>
                 </div>
             </fieldset>
         </form>
+        <div id="mainDiv">
+            <div class="row col-sm-5" v-if="result !=null"> found {{ (result != null)?result.totalItems: ''}}</div>
+            <div class = "row">
+             <book-display v-if="result !=null" v-for="(book, index) in result.items" :key="book.id" :book="JSON.stringify(book)"></book-display>
+        </div>
     </div>
 
-<div id="mainDiv"></div>
+
 
 
     <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"
@@ -47,8 +54,14 @@
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"
         integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM"
         crossorigin="anonymous"></script>
-    
-        <script src="js/script.js"></script>
+
+    <!--<script src="js/script.js"></script>-->
+    <script src="js/main.js"></script>
+    <script src="js/components/bookDisplay.js"></script>
+
+    <script>
+        const mountedApp = app.mount("#app")
+    </script>
 
 </body>
 
